<resources>
    <string name="app_name">AppointmentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="deleteall">deleteAll</string>
    <string name="reserve">Reserve</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
</resources>